--- a/galeri.html
+++ b/galeri.html
@@ -1,15 +1,18 @@
-<!doctype html><html lang="id"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Galeri - Ekstra Tari</title><link rel="stylesheet" href="/assets/css/style.css"></head><body><div class="container">
-  <header class="header"><div class="brand"><img src="/assets/img/logo-sekolah.jpg" alt="logo sekolah"><div><div class="title">Galeri Kegiatan</div><div style="font-size:12px;color:var(--muted)">Ekstra Tari</div></div></div><nav><ul><li><a href="index.html">Beranda</a></li><li><a href="galeri.html">Galeri</a></li></ul></nav><img src="/assets/img/logo-ekstra.png" alt="logo ekstra" style="height:64px;border-radius:8px"></header>
-  <section class="hero"><h1>Galeri Foto & Video</h1><p style="color:var(--muted)">Upload foto ke folder <code>/assets/img/kegiatan</code> lalu refresh halaman.</p>
-  <div class="cards" id="gallery"></div></section>
-  <footer class="footer"><div class="left"><strong>SDI Ulumiyah Al Makruf</strong></div><div class="social"><a href="index.html">Kembali</a></div></footer>
+<!doctype html><html lang='id'><head><meta charset='utf-8'><meta name='viewport' content='width=device-width,initial-scale=1'><title>Galeri</title><link rel='stylesheet' href='assets/css/style.css'></head><body>
+<div class="header">
+  <div class="brand"><img src="assets/img/logo-sekolah.jpg" alt="logo"><div style="margin-left:8px"><strong style="font-size:18px">Ekstra Tari</strong><div class="small">SDI Ulumiyah Al Makruf</div></div></div>
+  <div style="text-align:right"><img src="assets/img/logo-ekstra.png" alt="logo" style="height:64px;border-radius:8px"></div>
 </div>
-<script src="/assets/js/main.js"></script>
-<script>
-fetch('/assets/img/kegiatan').catch(()=>{}); // placeholder - static hosting cannot list files reliably
-// We'll show sample images if present
-const gallery = document.getElementById('gallery');
-const sample = ['/assets/img/logo-ekstra.png','/assets/img/logo-sekolah.jpg'];
-sample.forEach(s=>{ const d = document.createElement('div'); d.className='card'; d.innerHTML = `<img src="${s}" style="max-width:100%;border-radius:8px"><p style="margin-top:8px">Contoh Foto</p>`; gallery.appendChild(d); });
-</script>
+<div class="nav">
+  <a href="index.html">Beranda</a><a href="galeri.html">Galeri</a><a href="pendaftaran.html">Pendaftaran</a><a href="absensi.html">Absensi</a><a href="rapor.html">Rapor</a><a href="kinerja.html">Kinerja</a><a href="materi.html">Materi</a><a href="kontak.html">Kontak</a>
+</div>
+<div class='container'><div class='hero'><h2>Galeri</h2><p class='small'>Upload foto ke assets/img/ lalu tambahkan di HTML jika perlu.</p></div></div>
+<div class="footer">
+  <div style="max-width:1000px;margin:0 auto">
+    <strong>SDI Ulumiyah Al Makruf</strong><br>
+    Jl. Arbei Dsn. Jombangan Ds. Tertek, Pare, Kec. Pare, Kab. Kediri, Jawa Timur<br>
+    Email: sdiuam.almakruf@gmail.com | Telp: 085859830350 (Pak Khafid) | Website: <a href="https://sdiulumiyahalmakruf.vercel.app/" target="_blank" style="color:var(--gold)">sdiulumiyahalmakruf.vercel.app</a><br>
+    Ikuti kami: <a href="https://www.youtube.com/@SDI.UlumiyahAlmakruf" target="_blank" style="color:var(--gold)">YouTube</a> | <a href="https://www.instagram.com/sdiulumiyahalmakruf/" style="color:var(--gold)" target="_blank">Instagram</a> | <a href="https://www.facebook.com/p/Sdi-Ulumiyah-Al-Makruf-100077475893950/" style="color:var(--gold)" target="_blank">Facebook</a>
+  </div>
+</div>
 </body></html>
