--- a/index.html
+++ b/index.html
@@ -1,18 +1,92 @@
-<!doctype html><html lang='id'><head><meta charset='utf-8'><meta name='viewport' content='width=device-width,initial-scale=1'><title>Ekstra Tari</title><link rel='stylesheet' href='assets/css/style.css'></head><body>
+<!doctype html>
+<html lang="id">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Ekstra Tari - Wall</title>
+  <link rel="stylesheet" href="assets/css/style.css">
+</head>
+<body>
 <div class="header">
-  <div class="brand"><img src="assets/img/logo-sekolah.jpg" alt="logo"><div style="margin-left:8px"><strong style="font-size:18px">Ekstra Tari</strong><div class="small">SDI Ulumiyah Al Makruf</div></div></div>
-  <div style="text-align:right"><img src="assets/img/logo-ekstra.png" alt="logo" style="height:64px;border-radius:8px"></div>
-</div>
-<div class="nav">
-  <a href="index.html">Beranda</a><a href="galeri.html">Galeri</a><a href="pendaftaran.html">Pendaftaran</a><a href="absensi.html">Absensi</a><a href="rapor.html">Rapor</a><a href="kinerja.html">Kinerja</a><a href="materi.html">Materi</a><a href="kontak.html">Kontak</a>
-</div>
-<div class='container'><div class='hero'><h1>Wall Kegiatan — Tahun 2025</h1><div id='events'></div></div></div>
-<div class="footer">
-  <div style="max-width:1000px;margin:0 auto">
-    <strong>SDI Ulumiyah Al Makruf</strong><br>
-    Jl. Arbei Dsn. Jombangan Ds. Tertek, Pare, Kec. Pare, Kab. Kediri, Jawa Timur<br>
-    Email: sdiuam.almakruf@gmail.com | Telp: 085859830350 (Pak Khafid) | Website: <a href="https://sdiulumiyahalmakruf.vercel.app/" target="_blank" style="color:var(--gold)">sdiulumiyahalmakruf.vercel.app</a><br>
-    Ikuti kami: <a href="https://www.youtube.com/@SDI.UlumiyahAlmakruf" target="_blank" style="color:var(--gold)">YouTube</a> | <a href="https://www.instagram.com/sdiulumiyahalmakruf/" style="color:var(--gold)" target="_blank">Instagram</a> | <a href="https://www.facebook.com/p/Sdi-Ulumiyah-Al-Makruf-100077475893950/" style="color:var(--gold)" target="_blank">Facebook</a>
+  <div class="brand">
+    <strong style="font-size:22px">Ekstra Tari</strong>
+    <div class="small">SDI Ulumiyah Al Makruf</div>
   </div>
 </div>
-<script>fetch('data/kegiatan.json').then(r=>r.json()).then(d=>{const el=document.getElementById('events');d.events.forEach(ev=>{const div=document.createElement('div');div.className='hero';div.style.marginTop='12px';div.innerHTML=`<h3>${ev.judul}</h3><p class='small'>${ev.tanggal} — ${ev.deskripsi}</p>`;el.appendChild(div);});});</script></body></html>
+
+<div class="nav">
+  <a href="index.html">Beranda</a>
+  <a href="galeri.html">Galeri</a>
+  <a href="admin.html">Admin</a>
+  <a href="absensi.html">Absensi</a>
+</div>
+
+<div class="container">
+  <div class="hero">
+    <h1>Agenda Kegiatan — Tahun 2025</h1>
+    <div id="agenda-list"></div>
+  </div>
+
+  <div class="hero">
+    <h1>Dokumentasi Kegiatan</h1>
+    <div id="galeri-preview" style="display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:12px"></div>
+  </div>
+
+  <div class="hero">
+    <h1>Ringkasan Absensi Mingguan</h1>
+    <table class="table">
+      <thead>
+        <tr><th>Tanggal</th><th>Hadir</th><th>Izin</th><th>Sakit</th><th>Alpa</th></tr>
+      </thead>
+      <tbody id="absensi-ringkasan"></tbody>
+    </table>
+  </div>
+</div>
+
+<div class="footer">
+  <div>
+    <strong>SDI Ulumiyah Al Makruf</strong><br>
+    Jl. Arbei Dsn. Jombangan Ds. Tertek, Pare, Kec. Pare, Kab. Kediri, Jawa Timur<br>
+    Email: sdiuam.almakruf@gmail.com | Telp: 085859830350 (Pak Khafid)
+  </div>
+</div>
+
+<script>
+fetch('data/kegiatan.json').then(r=>r.json()).then(d=>{
+  const agendaEl=document.getElementById('agenda-list');
+  let bulanMap={};
+  d.agenda.forEach(ev=>{
+    const bulan=new Date(ev.tanggal).toLocaleString('id-ID',{month:'long',year:'numeric'});
+    if(!bulanMap[bulan]) bulanMap[bulan]=[];
+    bulanMap[bulan].push(ev);
+  });
+  for(const bln in bulanMap){
+    const sec=document.createElement('div');
+    sec.innerHTML=`<h3>${bln}</h3>`;
+    bulanMap[bln].forEach(ev=>{
+      const div=document.createElement('div');
+      div.innerHTML=`<strong>${ev.judul}</strong><br><span>${ev.tanggal} — ${ev.deskripsi}</span>`;
+      sec.appendChild(div);
+    });
+    agendaEl.appendChild(sec);
+  }
+
+  const galeriEl=document.getElementById('galeri-preview');
+  d.galeri.forEach(g=>{
+    const fig=document.createElement('figure');
+    fig.innerHTML=`<img src="${g.img}" alt="${g.judul}" style="width:100%;border-radius:8px"><figcaption>${g.tanggal} — ${g.judul}</figcaption>`;
+    galeriEl.appendChild(fig);
+  });
+});
+
+fetch('data/absensi.json').then(r=>r.json()).then(list=>{
+  const tbody=document.getElementById('absensi-ringkasan');
+  list.forEach(item=>{
+    const tr=document.createElement('tr');
+    tr.innerHTML=`<td><a href="absensi.html">${item.tanggal}</a></td><td>${item.rekap.hadir}</td><td>${item.rekap.izin}</td><td>${item.rekap.sakit}</td><td>${item.rekap.alpa}</td>`;
+    tbody.appendChild(tr);
+  });
+});
+</script>
+</body>
+</html>
