--- a/index.html
+++ b/index.html
@@ -5,53 +5,78 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Ekstra Tari - Wall</title>
   <link rel="stylesheet" href="assets/css/style.css">
+  <style>
+    /* Tambahan untuk responsif */
+    .nav {flex-wrap: wrap; gap: 8px;}
+    .nav a {padding:6px 10px; font-size:14px;}
+    img {max-width:100%; height:auto;}
+    table {width:100%; font-size:14px;}
+    th, td {padding:6px;}
+    @media(max-width:600px){
+      h1 {font-size:18px;}
+      h2 {font-size:16px;}
+      .header {flex-direction:column; text-align:center;}
+      .brand {margin-bottom:10px;}
+    }
+  </style>
 </head>
 <body>
+
+<!-- Header -->
 <div class="header">
   <div class="brand">
-    <strong style="font-size:22px">Ekstra Tari</strong>
+    <img src="assets/img/logo-sekolah.jpg" alt="logo sekolah" style="height:50px;margin-right:8px;vertical-align:middle;">
+    <strong style="font-size:22px;vertical-align:middle;">Ekstra Tari</strong>
     <div class="small">SDI Ulumiyah Al Makruf</div>
   </div>
-</div>
-</head>
-<body>
-<div class="header">
-  <div class="brand"><img src="assets/img/logo-sekolah.jpg" alt="logo"><div style="margin-left:8px"><strong style="font-size:22px">Ekstra Tari</strong><div class="small">SDI Ulumiyah Al Makruf</div></div></div>
-  <div style="text-align:right"><img src="assets/img/logo-ekstra.png" alt="logo" style="height:64px;border-radius:8px"></div>
-</div>
-<div class="nav">
-  <a href="index.html">Beranda</a><a href="galeri.html">Galeri</a><a href="pendaftaran.html">Pendaftaran</a><a href="absensi.html">Absensi</a><a href="rapor.html">Rapor</a><a href="kinerja.html">Kinerja</a><a href="materi.html">Materi</a><a href="kontak.html">Kontak</a>
+  <div style="text-align:right">
+    <img src="assets/img/logo-ekstra.png" alt="logo ekstra" style="height:64px;border-radius:8px">
+  </div>
 </div>
 
+<!-- Navigasi -->
 <div class="nav">
   <a href="index.html">Beranda</a>
   <a href="galeri.html">Galeri</a>
-  <a href="admin.html">Admin</a>
+  <a href="pendaftaran.html">Pendaftaran</a>
   <a href="absensi.html">Absensi</a>
+  <a href="rapor.html">Rapor</a>
+  <a href="kinerja.html">Kinerja</a>
+  <a href="materi.html">Materi</a>
+  <a href="kontak.html">Kontak</a>
+  <a href="admin.html">Admin</a>
 </div>
 
+<!-- Kontainer -->
 <div class="container">
+
+  <!-- Agenda -->
   <div class="hero">
     <h1>Agenda Kegiatan — Tahun 2025</h1>
     <div id="agenda-list"></div>
   </div>
 
+  <!-- Dokumentasi -->
   <div class="hero">
     <h1>Dokumentasi Kegiatan</h1>
-    <div id="galeri-preview" style="display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:12px"></div>
+    <div id="galeri-preview" style="display:grid;grid-template-columns:repeat(auto-fit,minmax(160px,1fr));gap:12px"></div>
   </div>
 
+  <!-- Ringkasan Absensi -->
   <div class="hero">
     <h1>Ringkasan Absensi Mingguan</h1>
-    <table class="table">
-      <thead>
-        <tr><th>Tanggal</th><th>Hadir</th><th>Izin</th><th>Sakit</th><th>Alpa</th></tr>
-      </thead>
-      <tbody id="absensi-ringkasan"></tbody>
-    </table>
+    <div style="overflow-x:auto;">
+      <table class="table">
+        <thead>
+          <tr><th>Tanggal</th><th>Hadir</th><th>Izin</th><th>Sakit</th><th>Alpa</th></tr>
+        </thead>
+        <tbody id="absensi-ringkasan"></tbody>
+      </table>
+    </div>
   </div>
 </div>
 
+<!-- Footer -->
 <div class="footer">
   <div>
     <strong>SDI Ulumiyah Al Makruf</strong><br>
@@ -83,7 +108,7 @@ fetch('data/kegiatan.json').then(r=>r.json()).then(d=>{
   const galeriEl=document.getElementById('galeri-preview');
   d.galeri.forEach(g=>{
     const fig=document.createElement('figure');
-    fig.innerHTML=`<img src="${g.img}" alt="${g.judul}" style="width:100%;border-radius:8px"><figcaption>${g.tanggal} — ${g.judul}</figcaption>`;
+    fig.innerHTML=`<img src="${g.img}" alt="${g.judul}" style="border-radius:8px"><figcaption>${g.tanggal} — ${g.judul}</figcaption>`;
     galeriEl.appendChild(fig);
   });
 });
@@ -99,4 +124,3 @@ fetch('data/absensi.json').then(r=>r.json()).then(list=>{
 </script>
 </body>
 </html>
-
