--- a/absensi.html
+++ b/absensi.html
@@ -1,18 +1,73 @@
-<!doctype html><html lang='id'><head><meta charset='utf-8'><meta name='viewport' content='width=device-width,initial-scale=1'><title>Absensi</title><link rel='stylesheet' href='assets/css/style.css'></head><body>
+<!doctype html>
+<html lang="id">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Absensi Siswa - Ekstra Tari</title>
+  <link rel="stylesheet" href="assets/css/style.css">
+</head>
+<body>
+
+<!-- Header -->
 <div class="header">
-  <div class="brand"><img src="assets/img/logo-sekolah.jpg" alt="logo"><div style="margin-left:8px"><strong style="font-size:18px">Ekstra Tari</strong><div class="small">SDI Ulumiyah Al Makruf</div></div></div>
-  <div style="text-align:right"><img src="assets/img/logo-ekstra.png" alt="logo" style="height:64px;border-radius:8px"></div>
-</div>
-<div class="nav">
-  <a href="index.html">Beranda</a><a href="galeri.html">Galeri</a><a href="pendaftaran.html">Pendaftaran</a><a href="absensi.html">Absensi</a><a href="rapor.html">Rapor</a><a href="kinerja.html">Kinerja</a><a href="materi.html">Materi</a><a href="kontak.html">Kontak</a>
-</div>
-<div class='container'><div class='hero'><h2>Absensi - Ceklist Pertemuan</h2><p class='small'>Pilih tanggal, centang yang hadir, jika tidak hadir pilih alasan. Simpan pertemuan lalu ekspor ke Word/Excel untuk arsip.</p><label for='tglPertemuan'>Tanggal Pertemuan</label><input type='date' id='tglPertemuan' class='input'><div id='absensi-list' style='margin-top:12px'></div><div style='margin-top:12px'><button class='btn' onclick='savePertemuan()'>Simpan Pertemuan</button> <button class='btn' onclick='exportPertemuanToWord()'>Download Word</button></div><h3 style='margin-top:18px'>Preview Tabel</h3><table class='table'><thead><tr><th>No</th><th>Nama</th><th>Kehadiran</th><th>Keterangan</th></tr></thead><tbody id='absensi-table-body'></tbody></table></div></div>
-<div class="footer">
-  <div style="max-width:1000px;margin:0 auto">
-    <strong>SDI Ulumiyah Al Makruf</strong><br>
-    Jl. Arbei Dsn. Jombangan Ds. Tertek, Pare, Kec. Pare, Kab. Kediri, Jawa Timur<br>
-    Email: sdiuam.almakruf@gmail.com | Telp: 085859830350 (Pak Khafid) | Website: <a href="https://sdiulumiyahalmakruf.vercel.app/" target="_blank" style="color:var(--gold)">sdiulumiyahalmakruf.vercel.app</a><br>
-    Ikuti kami: <a href="https://www.youtube.com/@SDI.UlumiyahAlmakruf" target="_blank" style="color:var(--gold)">YouTube</a> | <a href="https://www.instagram.com/sdiulumiyahalmakruf/" style="color:var(--gold)" target="_blank">Instagram</a> | <a href="https://www.facebook.com/p/Sdi-Ulumiyah-Al-Makruf-100077475893950/" style="color:var(--gold)" target="_blank">Facebook</a>
+  <div class="brand">
+    <img src="assets/img/logo-sekolah.jpg" alt="logo sekolah">
+    <div class="brand-text">
+      <div class="title">Ekstra Tari</div>
+      <div class="subtitle">SDI Ulumiyah Al Makruf</div>
+    </div>
+  </div>
+  <div>
+    <img src="assets/img/logo-ekstra.png" alt="logo ekstra" style="height:64px;border-radius:8px">
   </div>
 </div>
-<script src='assets/js/main.js'></script><script src='assets/js/absensi.js'></script></body></html>
+
+<!-- Navigasi -->
+<div class="nav">
+  <a href="index.html">Beranda</a>
+  <a href="galeri.html">Galeri</a>
+  <a href="pendaftaran.html">Pendaftaran</a>
+  <a href="absensi.html">Absensi</a>
+  <a href="rapor.html">Rapor</a>
+  <a href="kinerja.html">Kinerja</a>
+  <a href="materi.html">Materi</a>
+  <a href="kontak.html">Kontak</a>
+  <a href="admin.html">Admin</a>
+</div>
+
+<!-- Kontainer -->
+<div class="container">
+  <div class="hero">
+    <h1>Absensi Siswa</h1>
+    <div id="absensi-detail"></div>
+  </div>
+</div>
+
+<!-- Footer -->
+<div class="footer">
+  <div>
+    <strong>SDI Ulumiyah Al Makruf</strong><br>
+    Jl. Arbei Dsn. Jombangan Ds. Tertek, Pare, Kec. Pare, Kab. Kediri, Jawa Timur<br>
+    Email: sdiuam.almakruf@gmail.com | Telp: 085859830350 (Pak Khafid)
+  </div>
+</div>
+
+<script>
+fetch('data/absensi.json').then(r=>r.json()).then(list=>{
+  const container=document.getElementById('absensi-detail');
+  list.forEach(pertemuan=>{
+    const div=document.createElement('div');
+    div.className="hero";
+    div.innerHTML=`<h2>Pertemuan ${pertemuan.tanggal}</h2>
+    <table class="table">
+      <thead><tr><th>Nama</th><th>Status</th></tr></thead>
+      <tbody>
+        ${pertemuan.siswa.map(s=>`<tr><td>${s.nama}</td><td>${s.status}</td></tr>`).join('')}
+      </tbody>
+    </table>`;
+    container.appendChild(div);
+  });
+});
+</script>
+</body>
+</html>
