--- a/absensi.html
+++ b/absensi.html
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Absensi Siswa - Ekstra Tari</title>
   <link rel="stylesheet" href="assets/css/style.css">
+  <!-- pustaka untuk generate Word -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/docxtemplater/3.36.0/docxtemplater.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pizzip/3.1.1/pizzip.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pizzip/3.1.1/pizzip-utils.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
 </head>
 <body>
 
@@ -39,17 +44,14 @@
 <div class="container">
   <div class="hero">
     <h1>Absensi Pertemuan</h1>
-    <p>Isi daftar hadir siswa setiap pertemuan. Data bisa diunduh sebagai JSON untuk arsip bulanan.</p>
-    
-    <!-- Form Absensi -->
     <form id="absensiForm">
       <label>Tanggal Pertemuan:</label>
       <input type="date" id="tanggal" class="input" required>
-
       <table class="table">
         <thead>
           <tr>
             <th>Nama Siswa</th>
+            <th>Kelas</th>
             <th>Hadir</th>
             <th>Izin</th>
             <th>Sakit</th>
@@ -59,19 +61,14 @@
         <tbody id="siswa-list"></tbody>
       </table>
       <button type="submit" class="btn">Simpan Absensi</button>
-      <button type="button" class="btn" onclick="downloadAbsensi()">Download JSON</button>
+      <button type="button" class="btn" onclick="downloadAbsensiJSON()">Download JSON</button>
+      <button type="button" class="btn" onclick="downloadAbsensiWord()">Download Word</button>
     </form>
   </div>
 
-  <!-- Data Absensi -->
   <div class="hero">
-    <h2>Rekap Absensi Tersimpan</h2>
+    <h2>Rekap Absensi</h2>
     <div id="rekap-absensi"></div>
-    <p style="margin-top:30px;text-align:right;">
-      Kediri, <span id="today"></span><br>
-      Guru Ekstra Tari<br><br><br>
-      <strong>Nikmatu Zuhroh</strong>
-    </p>
   </div>
 </div>
 
@@ -83,34 +80,36 @@
 </div>
 
 <script>
-// contoh daftar siswa (bisa diambil dari siswa.json)
-const siswa = [
-  "Ahmad Fauzi","Bunga Melati","Citra Dewi","Dewi Anggraini","Eko Prasetyo"
-];
-
-const siswaList = document.getElementById('siswa-list');
-siswa.forEach(nama=>{
-  const tr=document.createElement('tr');
-  tr.innerHTML=`
-    <td>${nama}</td>
-    <td><input type="radio" name="${nama}" value="Hadir" required></td>
-    <td><input type="radio" name="${nama}" value="Izin"></td>
-    <td><input type="radio" name="${nama}" value="Sakit"></td>
-    <td><input type="radio" name="${nama}" value="Alpa"></td>
-  `;
-  siswaList.appendChild(tr);
+// Load siswa dari siswa.json
+let siswa=[];
+fetch('data/siswa.json')
+.then(r=>r.json())
+.then(data=>{
+  siswa=data;
+  const tbody=document.getElementById('siswa-list');
+  siswa.forEach(s=>{
+    const tr=document.createElement('tr');
+    tr.innerHTML=`
+      <td>${s.nama}</td>
+      <td>${s.kelas}</td>
+      <td><input type="radio" name="${s.nama}" value="Hadir" required></td>
+      <td><input type="radio" name="${s.nama}" value="Izin"></td>
+      <td><input type="radio" name="${s.nama}" value="Sakit"></td>
+      <td><input type="radio" name="${s.nama}" value="Alpa"></td>
+    `;
+    tbody.appendChild(tr);
+  });
+  tampilkanRekap();
 });
 
-// simpan absensi
 document.getElementById('absensiForm').addEventListener('submit',e=>{
   e.preventDefault();
   const tanggal=document.getElementById('tanggal').value;
   let pertemuan={tanggal,siswa:[]};
-  siswa.forEach(nama=>{
-    const status=document.querySelector(`input[name="${nama}"]:checked`).value;
-    pertemuan.siswa.push({nama,status});
+  siswa.forEach(s=>{
+    const status=document.querySelector(`input[name="${s.nama}"]:checked`).value;
+    pertemuan.siswa.push({nama:s.nama,kelas:s.kelas,status});
   });
-
   let data=JSON.parse(localStorage.getItem('absensi'))||[];
   data.push(pertemuan);
   localStorage.setItem('absensi',JSON.stringify(data));
@@ -118,37 +117,45 @@ document.getElementById('absensiForm').addEventListener('submit',e=>{
   alert("Absensi tersimpan!");
 });
 
-// tampilkan rekap
 function tampilkanRekap(){
   const data=JSON.parse(localStorage.getItem('absensi'))||[];
   const rekap=document.getElementById('rekap-absensi');
   rekap.innerHTML="";
-  data.forEach(pertemuan=>{
-    let table=`<h3>${pertemuan.tanggal}</h3>
-    <table class="table"><tr><th>Nama</th><th>Status</th></tr>`;
-    pertemuan.siswa.forEach(s=>{
-      table+=`<tr><td>${s.nama}</td><td>${s.status}</td></tr>`;
+  data.forEach(p=>{
+    let table=`<h3>${p.tanggal}</h3><table class="table"><tr><th>Nama</th><th>Kelas</th><th>Status</th></tr>`;
+    p.siswa.forEach(s=>{
+      table+=`<tr><td>${s.nama}</td><td>${s.kelas}</td><td>${s.status}</td></tr>`;
     });
-    table+="</table>";
+    table+=`</table><p style="margin-top:20px;text-align:right;">Kediri, ${new Date().toLocaleDateString('id-ID')}<br>Guru Ekstra Tari<br><br><br><strong>Nikmatu Zuhroh</strong></p>`;
     rekap.innerHTML+=table;
   });
 }
-tampilkanRekap();
 
-// download JSON
-function downloadAbsensi(){
+function downloadAbsensiJSON(){
   const data=localStorage.getItem('absensi');
   if(!data){alert("Belum ada data!");return;}
   const blob=new Blob([data],{type:'application/json'});
-  const url=URL.createObjectURL(blob);
-  const a=document.createElement('a');
-  a.href=url;a.download="absensi.json";
-  a.click();
-  URL.revokeObjectURL(url);
+  saveAs(blob,"absensi.json");
 }
 
-// tanggal hari ini
-document.getElementById('today').innerText=new Date().toLocaleDateString('id-ID',{day:'numeric',month:'long',year:'numeric'});
+function downloadAbsensiWord(){
+  const data=JSON.parse(localStorage.getItem('absensi'))||[];
+  if(data.length===0){alert("Belum ada data!");return;}
+
+  let content=`ABSENSI EKSTRA TARI SDI ULUMIYAH AL MAKRUf\n\n`;
+  data.forEach(p=>{
+    content+=`Pertemuan: ${p.tanggal}\n`;
+    content+=`Nama\tKelas\tStatus\n`;
+    content+=`---------------------------------------\n`;
+    p.siswa.forEach(s=>{
+      content+=`${s.nama}\t${s.kelas}\t${s.status}\n`;
+    });
+    content+=`\nKediri, ${new Date().toLocaleDateString('id-ID')}\nGuru Ekstra Tari\n\n\nNikmatu Zuhroh\n\n\n`;
+  });
+
+  const blob=new Blob([content],{type:"application/msword"});
+  saveAs(blob,"Absensi_Ekstra_Tari.doc");
+}
 </script>
 </body>
 </html>
